@@ -39,6 +39,7 @@ Version 3.0.0 - SVN
  - Flush results in config checker for better feedback.
  - Fixed DB installation support with script 'dj-setup-database'.
  - Update included dash shell to version 0.5.5.1-2 (Debian upstream).
+ - Replace beep by alert plugin program. (Closes: #1878083)
 
 Version 2.2.0 - 11 August 2008
 ------------------------------
